Fix Bug 306700 - Command line option --msg does not work

FIXED-IN: 4.9.2
BUG: 306700